# cmake-tidy

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
crates/cmake-tidy/: Cargo.toml
crates/cmake-tidy-ast/: Cargo.toml
crates/cmake-tidy-ast/src/: lib.rs
crates/cmake-tidy-check/: Cargo.toml  build.rs
crates/cmake-tidy-check/src/: lib.rs
crates/cmake-tidy-check/tests/: fixtures.rs
crates/cmake-tidy-config/: Cargo.toml
crates/cmake-tidy-config/src/: coverage_excluded.rs  lib.rs
crates/cmake-tidy-config/tests/: loading.rs
crates/cmake-tidy-format/: Cargo.toml
crates/cmake-tidy-format/src/: lib.rs
crates/cmake-tidy-lexer/: Cargo.toml
crates/cmake-tidy-lexer/src/: cursor.rs  lexer.rs  lib.rs  token.rs
crates/cmake-tidy-parser/: Cargo.toml  build.rs
crates/cmake-tidy-parser/src/: lib.rs  parsed.rs  parser.rs  token_source.rs
crates/cmake-tidy-parser/tests/: fixtures.rs
crates/cmake-tidy/src/: check.rs  coverage_excluded.rs  format.rs  main.rs  server.rs
crates/cmake-tidy/tests/: check.rs  format.rs  server.rs
