[workspace]
members = [
    "crates/cmake-tidy",
    "crates/cmake-tidy-check",
    "crates/cmake-tidy-ast",
    "crates/cmake-tidy-lexer",
    "crates/cmake-tidy-parser",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
thiserror = "2.0.12"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
