[workspace]
members = [
    "crates/cmake-tidy",
    "crates/cmake-tidy-check",
    "crates/cmake-tidy-config",
    "crates/cmake-tidy-format",
    "crates/cmake-tidy-ast",
    "crates/cmake-tidy-lexer",
    "crates/cmake-tidy-parser",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.9.8"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
