[package]
name = "cmake-tidy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cmake-tidy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cmake-tidy-parser = { path = "../cmake-tidy-parser" }

[lints]
workspace = true

