[package]
name = "cmake-tidy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cmake-tidy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cmake-tidy-ast = { path = "../cmake-tidy-ast" }
cmake-tidy-check = { path = "../cmake-tidy-check" }
cmake-tidy-config = { path = "../cmake-tidy-config" }
cmake-tidy-format = { path = "../cmake-tidy-format" }
cmake-tidy-parser = { path = "../cmake-tidy-parser" }

[lints]
workspace = true

[dev-dependencies]
anyhow.workspace = true
